<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="400dp"
            android:layout_height="43dp"
            android:layout_marginBottom="20dp"
            android:text="@string/select_training" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/push_ups_group" />

        <TableLayout
            android:id="@+id/type_of_exercise"
            android:layout_width="match_parent"
            android:layout_height="199dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/upper_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upper_body_push_ups_select_training" />

                <Button
                    android:id="@+id/lower_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lower_body_push_ups_select_training" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/half_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/half_top_push_ups_select_training" />

                <Button
                    android:id="@+id/half_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/half_bottom_push_ups_select_training" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/slow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slow_push_ups_select_training" />

                <Button
                    android:id="@+id/normal_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal_push_ups_select_training" />

                <Button
                    android:id="@+id/fast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fast_push_ups_select_training" />
            </TableRow>

        </TableLayout>

        <ImageView
            android:id="@+id/push_ups_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/half_bottom_push_ups" />

        <EditText
            android:id="@+id/countdown"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>